--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.brekka</groupId>
+    <parent>
+        <groupId>org.brekka</groupId>
+        <artifactId>root</artifactId>
+        <version>1.0</version>
+    </parent>
+    
+    <description>
+        Custom DEB archive for Apache Tomcat including multi-instance support scripts
+    </description>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
     <artifactId>tomcat-deb</artifactId>
-    <version>7.0.42</version>
+    <version>7.0.50-SNAPSHOT</version>
+    
+    <properties>
+        <tomcat.version>7.0.50</tomcat.version>
+        <dist.dir>${project.build.directory}/tomcat-dist</dist.dir>
+        <target.usr>/usr/share/tomcat7</target.usr>
+    </properties>
 
     <build>
         <plugins>
@@ -23,11 +46,11 @@
                                 <artifactItem>
                                     <groupId>org.apache.tomcat</groupId>
                                     <artifactId>apache-tomcat</artifactId>
-                                    <version>${project.version}</version>
+                                    <version>${tomcat.version}</version>
                                     <type>zip</type>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${dist.dir}</outputDirectory>
-                                    <excludes>**/*.bat, apache-tomcat-${project.version}/webapps/**, apache-tomcat-${project.version}/temp</excludes>
+                                    <excludes>**/*.bat, apache-tomcat-${tomcat.version}/webapps/**, apache-tomcat-${tomcat.version}/temp</excludes>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -50,7 +73,7 @@
                             <deb>[[buildDir]]/tomcat_[[version]]_all.[[extension]]</deb>
                             <dataSet>
                                 <data>
-                                    <src>${dist.dir}/apache-tomcat-${project.version}/lib</src>
+                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/lib</src>
                                     <type>directory</type>
                                     <mapper>
                                         <type>perm</type>
@@ -60,7 +83,7 @@
                                     </mapper>
                                 </data>
                                 <data>
-                                    <src>${dist.dir}/apache-tomcat-${project.version}/conf</src>
+                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/conf</src>
                                     <type>directory</type>
                                     <mapper>
                                         <type>perm</type>
@@ -70,7 +93,7 @@
                                     </mapper>
                                 </data>
                                 <data>
-                                    <src>${dist.dir}/apache-tomcat-${project.version}/bin</src>
+                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/bin</src>
                                     <type>directory</type>
                                     <mapper>
                                         <type>perm</type>
@@ -113,7 +136,7 @@
                                     </mapper>
                                 </data>
                                 <data>
-                                    <src>${dist.dir}/apache-tomcat-${project.version}/LICENSE</src>
+                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/LICENSE</src>
                                     <type>file</type>
                                     <mapper>
                                         <type>perm</type>
@@ -124,7 +147,7 @@
                                     </mapper>
                                 </data>
                                 <data>
-                                    <src>${dist.dir}/apache-tomcat-${project.version}/NOTICE</src>
+                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/NOTICE</src>
                                     <type>file</type>
                                     <mapper>
                                         <type>perm</type>
@@ -135,7 +158,7 @@
                                     </mapper>
                                 </data>
                                 <data>
-                                    <src>${dist.dir}/apache-tomcat-${project.version}/RELEASE-NOTES</src>
+                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/RELEASE-NOTES</src>
                                     <type>file</type>
                                     <mapper>
                                         <type>perm</type>
@@ -184,20 +207,10 @@
         </pluginManagement>
     </build>
     
-    <properties>
-        <dist.dir>${project.build.directory}/tomcat-dist</dist.dir>
-        <target.usr>/usr/share/tomcat7</target.usr>
-    </properties>
-    
-    <distributionManagement>
-        <repository>
-            <id>brekka.org</id>
-            <name>VÍS Maven Repository-releases</name>
-            <url>https://brekka.org/maven/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>brekka.org</id>
-            <url>https://brekka.org/maven/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <scm>
+        <url>https://github.com/brekka/tomcat-deb.git</url>
+        <connection>https://github.com/brekka/tomcat-deb.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:brekka/tomcat-deb.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
