--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.brekka</groupId>
@@ -20,7 +19,7 @@
     </licenses>
     
     <artifactId>tomcat-deb</artifactId>
-    <version>7.0.50-SNAPSHOT</version>
+    <version>7.0.51-SNAPSHOT</version>
     
     <properties>
         <tomcat.version>7.0.50</tomcat.version>
@@ -210,7 +209,7 @@
     <scm>
         <url>https://github.com/brekka/tomcat-deb.git</url>
         <connection>https://github.com/brekka/tomcat-deb.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:brekka/tomcat-deb.git</developerConnection>
+        <developerConnection>scm:git:git://git@github.com:brekka/tomcat-deb.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 </project>
