--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </licenses>
     
     <artifactId>tomcat-deb</artifactId>
-    <version>7.0.50</version>
+    <version>7.0.51-SNAPSHOT</version>
     
     <properties>
         <tomcat.version>7.0.50</tomcat.version>
@@ -210,6 +210,6 @@
         <url>https://github.com/brekka/tomcat-deb.git</url>
         <connection>https://github.com/brekka/tomcat-deb.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/brekka/tomcat-deb.git</developerConnection>
-        <tag>v7.0.50</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
