--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,6 @@
         <url>https://github.com/brekka/tomcat-deb.git</url>
         <connection>https://github.com/brekka/tomcat-deb.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/brekka/tomcat-deb.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>tomcat7</tag>
     </scm>
 </project>
