Upgrade to Apache Tomcat 8.5.20

--- a/pom.xml
+++ b/pom.xml
@@ -1,216 +1,217 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.brekka</groupId>
-        <artifactId>root</artifactId>
-        <version>1.1</version>
-    </parent>
-    
-    <description>
-        Custom DEB archive for Apache Tomcat including multi-instance support scripts
-    </description>
-    
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    
-    <artifactId>tomcat-deb</artifactId>
-    <version>8.0.30-SNAPSHOT</version>
-    
-    <properties>
-        <tomcat.version>8.0.29</tomcat.version>
-        <dist.dir>${project.build.directory}/tomcat-dist</dist.dir>
-        <target.usr>/usr/share/tomcat8</target.usr>
-        <package_name>brekka-tomcat8</package_name>
-    </properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.brekka</groupId>
+    <artifactId>root</artifactId>
+    <version>1.1</version>
+  </parent>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>unpack</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.apache.tomcat</groupId>
-                                    <artifactId>apache-tomcat</artifactId>
-                                    <version>${tomcat.version}</version>
-                                    <type>zip</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>${dist.dir}</outputDirectory>
-                                    <excludes>**/*.bat, apache-tomcat-${tomcat.version}/webapps/**, apache-tomcat-${tomcat.version}/temp</excludes>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>jdeb</artifactId>
-                <groupId>org.vafer</groupId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jdeb</goal>
-                        </goals>
-                        <configuration>
-                            <verbose>true</verbose>
-                            <controlDir>${basedir}/src/deb/control</controlDir>
-                            <deb>[[buildDir]]/[[package_name]]_[[version]]_all.[[extension]]</deb>
-                            <dataSet>
-                                <data>
-                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/lib</src>
-                                    <type>directory</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>${target.usr}/lib</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/conf</src>
-                                    <type>directory</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>${target.usr}/conf</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/bin</src>
-                                    <type>directory</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>${target.usr}/bin</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                        <filemode>755</filemode>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${basedir}/src/main/scripts/usr/sbin</src>
-                                    <type>directory</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/usr/sbin</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                        <filemode>755</filemode>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${basedir}/src/main/scripts/usr/bin</src>
-                                    <type>directory</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/usr/bin</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                        <filemode>755</filemode>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${basedir}/src/main/scripts/etc/default/tomcat8</src>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/etc/default</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/LICENSE</src>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>${target.usr}</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                        <filemode>644</filemode>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/NOTICE</src>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>${target.usr}</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                        <filemode>644</filemode>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${dist.dir}/apache-tomcat-${tomcat.version}/RELEASE-NOTES</src>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>${target.usr}</prefix>
-                                        <user>loader</user>
-                                        <group>loader</group>
-                                        <filemode>644</filemode>
-                                    </mapper>
-                                </data>
-                            </dataSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <!-- Ignore/Execute plugin execution -->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <!-- copy-dependency plugin -->
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.maven.plugins</groupId>
-                                        <artifactId>maven-dependency-plugin</artifactId>
-                                        <versionRange>[1.0.0,)</versionRange>
-                                        <goals>
-                                            <goal>copy-dependencies</goal>
-                                            <goal>unpack</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-    
-    <scm>
-        <url>https://github.com/brekka/tomcat-deb.git</url>
-        <connection>https://github.com/brekka/tomcat-deb.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/brekka/tomcat-deb.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+  <description>
+    Custom DEB archive for Apache Tomcat including multi-instance support scripts
+  </description>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <artifactId>tomcat-deb</artifactId>
+  <version>8.5.20-SNAPSHOT</version>
+
+  <properties>
+    <tomcat.version>8.5.20</tomcat.version>
+    <dist.dir>${project.build.directory}/tomcat-dist</dist.dir>
+    <target.usr>/usr/share/tomcat85</target.usr>
+    <package_name>brekka-tomcat85</package_name>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <id>unpack</id>
+            <phase>package</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.apache.tomcat</groupId>
+                  <artifactId>apache-tomcat</artifactId>
+                  <version>${tomcat.version}</version>
+                  <type>zip</type>
+                  <overWrite>false</overWrite>
+                  <outputDirectory>${dist.dir}</outputDirectory>
+                  <excludes>**/*.bat, apache-tomcat-${tomcat.version}/webapps/**, apache-tomcat-${tomcat.version}/temp</excludes>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>jdeb</artifactId>
+        <groupId>org.vafer</groupId>
+        <version>1.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jdeb</goal>
+            </goals>
+            <configuration>
+              <verbose>true</verbose>
+              <controlDir>${basedir}/src/deb/control</controlDir>
+              <deb>[[buildDir]]/[[package_name]]_[[version]]_all.[[extension]]</deb>
+              <dataSet>
+                <data>
+                  <src>${dist.dir}/apache-tomcat-${tomcat.version}/lib</src>
+                  <type>directory</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>${target.usr}/lib</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${dist.dir}/apache-tomcat-${tomcat.version}/conf</src>
+                  <type>directory</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>${target.usr}/conf</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${dist.dir}/apache-tomcat-${tomcat.version}/bin</src>
+                  <type>directory</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>${target.usr}/bin</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                    <filemode>755</filemode>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${basedir}/src/main/scripts/usr/sbin</src>
+                  <type>directory</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>/usr/sbin</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                    <filemode>755</filemode>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${basedir}/src/main/scripts/usr/bin</src>
+                  <type>directory</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>/usr/bin</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                    <filemode>755</filemode>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${basedir}/src/main/scripts/etc/default/tomcat85</src>
+                  <type>file</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>/etc/default</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${dist.dir}/apache-tomcat-${tomcat.version}/LICENSE</src>
+                  <type>file</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>${target.usr}</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                    <filemode>644</filemode>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${dist.dir}/apache-tomcat-${tomcat.version}/NOTICE</src>
+                  <type>file</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>${target.usr}</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                    <filemode>644</filemode>
+                  </mapper>
+                </data>
+                <data>
+                  <src>${dist.dir}/apache-tomcat-${tomcat.version}/RELEASE-NOTES</src>
+                  <type>file</type>
+                  <mapper>
+                    <type>perm</type>
+                    <prefix>${target.usr}</prefix>
+                    <user>loader</user>
+                    <group>loader</group>
+                    <filemode>644</filemode>
+                  </mapper>
+                </data>
+              </dataSet>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
+        <!-- Ignore/Execute plugin execution -->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <!-- copy-dependency plugin -->
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <versionRange>[1.0.0,)</versionRange>
+                    <goals>
+                      <goal>copy-dependencies</goal>
+                      <goal>unpack</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore />
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+  <scm>
+    <url>https://github.com/brekka/tomcat-deb.git</url>
+    <connection>https://github.com/brekka/tomcat-deb.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/brekka/tomcat-deb.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 </project>
