--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   </licenses>
 
   <artifactId>tomcat-deb</artifactId>
-  <version>8.5.20</version>
+  <version>8.5.21-SNAPSHOT</version>
 
   <properties>
     <tomcat.version>8.5.20</tomcat.version>
@@ -211,6 +211,6 @@
     <url>https://github.com/brekka/tomcat-deb.git</url>
     <connection>https://github.com/brekka/tomcat-deb.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/brekka/tomcat-deb.git</developerConnection>
-    <tag>tomcat-deb-8.5.20</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
