--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,6 @@
     <url>https://github.com/brekka/tomcat-deb.git</url>
     <connection>https://github.com/brekka/tomcat-deb.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/brekka/tomcat-deb.git</developerConnection>
-    <tag>8.5</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
